# fast_api_template

./: .flake8  README.md  pyproject.toml
